--- a/Tracking-IP/template/search_result.html
+++ b/Tracking-IP/template/search_result.html
@@ -48,13 +48,13 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script>
         // show map by leaflet api
-        var map = L.map('map').setView([17.9641 , 102.5987], 11);
+        var map = L.map('map').setView([{{latitude}}, {{longitude}}], 11);
 
         L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
         }).addTo(map);
 
-        L.marker([17.9641 , 102.5987]).addTo(map)
+        L.marker([{{latitude}}, {{longitude}}]).addTo(map)
             .bindPopup('Searching location resault')
             .openPopup();
             
