--- a/Tracking-IP/template/about.html
+++ b/Tracking-IP/template/about.html
@@ -1,64 +1,40 @@
-<!-- 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | Search Engine Website</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../static/css/style.css">
-  </head>
-  <body>
-    <div class="main-wraper">
-      <div class="page-header text-">
-        <nav>
-            <div class="row">
-                <div class="col-4 text-center">
-                    <a class="logo" href="index.html">Tracking IP</a>
-                </div>
-                <ul class="nav-links col-7 d-flex">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li>
-                        <div class="dropdown" data-bs-theme="light">
-                            <img src="../static/img/english-flag.png" alt="" class="dropdown-toggle" data-bs-toggle="dropdown">
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#" ><img src="../static/img/english-flag.png" alt=""></a></li>
-                                <li><a class="dropdown-item" href="#" ><img src="../static/img/laos-flag.png" alt=""></a></li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-      </div>
-      
-    </div>
-
-    <footer>
-      <div class="text-center">
-          <div class="row">
-              <p>&copy; Done's final project 2023</p>
-          </div>
-      </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-  </body>
-</html> -->
 {% extends 'base.html' %}
 {% block page-wrapper %}
-  <div class="page-wraper"> 
-    <div class="container">
-      <h3 class="m-auto">Profile</h3>
+<div class="page-wraper">
+  <div class="container">
+    <div class="col">
+      <div class="text-center">
+        <h3 class="m-auto">Profile</h3>
+      </div>
+      <div class="row d-flex mt-3 mb-5">
+        <div class="col-4">
+          <div class="card">
+            <div class="card-body profile-card">
+              <h1>Done</h1>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card">
+            <div class="card-body profile-card">
+              <h1>Kie</h1>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card">
+            <div class="card-body profile-card">
+              <h1>Toy</h1>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="row">
         <div class="col-4">
           <h4>Project</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam blanditiis autem adipisci facilis unde rem beatae nisi eveniet consequuntur et corporis, cumque officia culpa explicabo iusto, aperiam quia! Non, perspiciatis!</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam blanditiis autem adipisci facilis unde rem
+            beatae nisi eveniet consequuntur et corporis, cumque officia culpa explicabo iusto, aperiam quia! Non,
+            perspiciatis!</p>
         </div>
         <div class="col-4">
           <h4>Members</h4>
@@ -68,9 +44,12 @@
         </div>
         <div class="col-4">
           <h1>Referances</h1>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit voluptas est provident impedit, consectetur modi officiis laborum tenetur eaque aspernatur natus totam. Impedit beatae aliquam necessitatibus autem, corrupti eum odio.</p>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit voluptas est provident impedit, consectetur
+            modi officiis laborum tenetur eaque aspernatur natus totam. Impedit beatae aliquam necessitatibus autem,
+            corrupti eum odio.</p>
         </div>
       </div>
     </div>
   </div>
+</div>
 {% endblock %}
