--- a/Tracking-IP/template/about.html
+++ b/Tracking-IP/template/about.html
@@ -1,40 +1,12 @@
 {% extends 'base.html' %}
 {% block page-wrapper %}
-<div class="page-wraper">
-  <div class="container">
-    <div class="col">
-      <div class="text-center">
-        <h3 class="m-auto">Profile</h3>
-      </div>
-      <div class="row d-flex mt-3 mb-5">
-        <div class="col-4">
-          <div class="card">
-            <div class="card-body profile-card">
-              <h1>Done</h1>
-            </div>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="card">
-            <div class="card-body profile-card">
-              <h1>Kie</h1>
-            </div>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="card">
-            <div class="card-body profile-card">
-              <h1>Toy</h1>
-            </div>
-          </div>
-        </div>
-      </div>
+  <div class="page-wraper"> 
+    <div class="container">
+      <h3 class="m-auto">Profile</h3>
       <div class="row">
         <div class="col-4">
           <h4>Project</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam blanditiis autem adipisci facilis unde rem
-            beatae nisi eveniet consequuntur et corporis, cumque officia culpa explicabo iusto, aperiam quia! Non,
-            perspiciatis!</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam blanditiis autem adipisci facilis unde rem beatae nisi eveniet consequuntur et corporis, cumque officia culpa explicabo iusto, aperiam quia! Non, perspiciatis!</p>
         </div>
         <div class="col-4">
           <h4>Members</h4>
@@ -44,12 +16,9 @@
         </div>
         <div class="col-4">
           <h1>Referances</h1>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit voluptas est provident impedit, consectetur
-            modi officiis laborum tenetur eaque aspernatur natus totam. Impedit beatae aliquam necessitatibus autem,
-            corrupti eum odio.</p>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit voluptas est provident impedit, consectetur modi officiis laborum tenetur eaque aspernatur natus totam. Impedit beatae aliquam necessitatibus autem, corrupti eum odio.</p>
         </div>
       </div>
     </div>
   </div>
-</div>
 {% endblock %}
