--- a/Tracking-IP/template/index.html
+++ b/Tracking-IP/template/index.html
@@ -17,52 +17,55 @@
                     </div>
                 </div>
             </form>
-            <!-- {% if messages %}
-                {% for message in messages %}
-                    <div class="m-auto p-auto col-10 alert alert-danger" role="alert">{{ message }}</div>
-                {% endfor %}
-            {% endif %} -->
             {% block search_result %}
                                
             {% endblock %}
         </div>
         <div class="container">
             <div class="row">
-                <main class="col-8">
-                    <article>
-                        <h1>My First Blog Post</h1>
-                        <p>Posted on January 1, 2022 by John Doe</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla elementum luctus justo, a
-                            fermentum elit scelerisque id. Nunc at ante in velit pellentesque bibendum. Nam aliquam urna
-                            vel velit tempus, sit amet pulvinar magna dictum. Vestibulum dictum, quam sed vestibulum
-                            aliquet, metus eros bibendum sem, et congue nulla eros vel neque. Nulla facilisi. Sed quam
-                            lectus, varius eget ex a, tincidunt congue enim. </p>
-                        <p>Suspendisse potenti. Sed id luctus enim. Sed in metus eget ex tincidunt bibendum. Proin
-                            pellentesque, orci eu vulputate bibendum, risus augue vehicula sapien, a placerat sapien
-                            orci vel velit. Sed ut eros ac neque bibendum ultrices. Aenean varius purus sit amet lacus
-                            luctus, eu iaculis nunc tincidunt. </p>
+                <main class="col-8 mian-contents">
+                    <article id="why_tis_website">
+                        <h1>Why use this website?</h1>
+                        <p>You can do many thing in this website as your target</p>
+                        <p>1. Security: This websites help you locate and identify the IP addresses of individuals or entities that may be trying to hack your system or steal your personal information. <br>
+
+                            2. Marketing: This websites can help online marketers and businesses track the geographical location of their visitors and customers, which can help them tailor their marketing campaigns and promotional offers accordingly. <br>
+                            
+                            3. Website Optimization: Can provide valuable insights into visitor behavior, which can help website owners optimize their website for better user experience and increased engagement. <br>
+                            
+                            4. Monitoring Online Activity: Can help you keep track of the online activity of your children, employees, or partners, which can help you identify any suspicious or unauthorized activity. 
+                            
+                            Overall, using tracking IP websites can provide valuable information regarding online activity and help improve security, marketing, and website optimization.</p>
                     </article>
-                    <article>
-                        <h1>My Second Blog Post</h1>
-                        <p>Posted on January 5, 2022 by Jane Smith</p>
-                        <p>Vivamus fermentum tortor at odio egestas, quis varius lorem feugiat. Donec ait erat, at
-                            feugiat ante. Phasellus id enim id mauris bibendum suscipit. Nam ac ex vestibulum, eleifend
-                            mauris vel, pharetra velit. Maecenas auctor non enim ut pharetra. Praesent id molestie nibh,
-                            nec ultrices leo. </p>
-                        <p>Proin pellentesque, orci eu vulputate bibendum, risus augue vehicula sapien, a placerat
-                            sapien orci vel velit. Sed ut eros ac neque bibendum ultrices. Aenean varius purus sit amet
-                            lacus luctus, eu iaculis nunc tincidunt. Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit. Nulla elementum luctus justo, a fermentum elit scelerisque id. Nunc at ante in velit
-                            pellentesque bibendum. Nam aliquam urna vel velit tempus, sit amet pulvinar magna dictum.
-                        </p>
+                    <article id="search_dt">
+                        <h1>The imfomations you can see when you search.</h1>
+                        <p>The resault when you are shearched by using host name or IP Address</p>
+                        <ul>
+                            <li>Ip Address</li>
+                            <li>Local Host Name</li>
+                            <li>Region of the country</li>
+                            <li>Coutry Name</li>
+                            <li>Country Code</li>
+                            <li>City</li>
+                            <li>Country Calling Code</li>
+                            <li>Organizaton of the internet service</li>
+                            <li>Latitude</li>
+                            <li>Longitude</li>
+                            <li>Location as Map</li>
+                        </ul>
+                        
+                    </article>
+                    <article id="ip_lookup">
+                        <h1>What is an "IP Lookup" ?</h1>
+                        <p>An IP Lookup is defined as finding the geographical location (or related information like currency, timezone etc.) of an IP address. The lookup can be done either with our API or website. For example, with a plan of 60,000 IP Lookups / month, you can find the location of 60,000 IP addresses in a month. Each conversion of IP address to location is counted as a lookup (repeat queries of the same IP address counts as a separate lookup).</p>     
                     </article>
                 </main>
                 <aside class="col-4 text-end">
-                    <h2>Categories</h2>
+                    <h2>Quik Access</h2>
                     <ul>
-                        <li><a href="#">Category 1</a></li>
-                        <li><a href="#">Category 2</a></li>
-                        <li><a href="#">Category 3</a></li>
+                        <li><a href="#why_tis_website">why this website?</a></li>
+                        <li><a href="#search_dt">Search Detials</a></li>
+                        <li><a href="#ip_lookup">What is an IP-Lookup</a></li>
                         <li><a href="#">Category 4</a></li>
                     </ul>
                 </aside>
