--- a/Tracking-IP/template/about.html
+++ b/Tracking-IP/template/about.html
@@ -2,7 +2,47 @@
 {% block page-wrapper %}
   <div class="page-wraper"> 
     <div class="container">
-      <h3 class="m-auto">Profile</h3>
+      <div class="col m-auto">
+        <h3 class="text-center">Profile</h3>
+        <div class="row d-flex justify-content-around">
+          <div class="card col-4 " style="width: 18rem;">
+            <div class="card-body pro-card m-3 text-center" >
+              <div class="img"><img src="../static/img/done.jpg" alt="" width="100%"></div>
+              <h6 class="mt-2">Name: Done Yang</h6>
+              <p>I am a person who plan and create this project</p>
+              <div class="col text-center icon d-flex justify-content-evenly">
+                <a href="#"><i class="bi bi-facebook "></i></a>
+                <a href="#"><i class="bi bi-instagram "></i></a>
+                <a href="#"><i class="bi bi-tiktok "></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="card col-4 " style="width: 18rem;">
+            <div class="card-body pro-card m-3 text-center" >
+              <div class="img"><img src="../static/img/kie.jpg" alt="" width="100%"></div>
+              <h6 class="mt-2">Name: PoukKie</h6>
+              <p>I am a member that suport and get some idea to create this project</p>
+              <div class="col text-center icon d-flex justify-content-evenly">
+                <a href="#"><i class="bi bi-facebook "></i></a>
+                <a href="#"><i class="bi bi-instagram "></i></a>
+                <a href="#"><i class="bi bi-tiktok "></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="card col-4 " style="width: 18rem;">
+            <div class="card-body pro-card m-3 text-center" >
+              <div class="img"><img src="../static/img/toi.jpg" alt="" width="100%"></div>
+              <h6 class="mt-2">Name: Toimanee</h6>
+              <p>I am a part of this project who help to check and review with the members</p>
+              <div class="col text-center icon d-flex justify-content-evenly">
+                <a href="#"><i class="bi bi-facebook "></i></a>
+                <a href="#"><i class="bi bi-instagram "></i></a>
+                <a href="#"><i class="bi bi-tiktok "></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="row">
         <div class="col-4">
           <h4>Project</h4>
