--- a/Tracking-IP/template/about.html
+++ b/Tracking-IP/template/about.html
@@ -43,9 +43,9 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row mt-5">
         <div class="col-4">
-          <h4>Project</h4>
+          <h4>Profile of This Website</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam blanditiis autem adipisci facilis unde rem beatae nisi eveniet consequuntur et corporis, cumque officia culpa explicabo iusto, aperiam quia! Non, perspiciatis!</p>
         </div>
         <div class="col-4">
@@ -55,8 +55,13 @@
           <P>Mss. Toimanee</P>
         </div>
         <div class="col-4">
-          <h1>Referances</h1>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit voluptas est provident impedit, consectetur modi officiis laborum tenetur eaque aspernatur natus totam. Impedit beatae aliquam necessitatibus autem, corrupti eum odio.</p>
+          <h4>Referances</h4>
+          <div class="row">
+            <a href="https://leafletjs.com/">Map API (leafletjs.com)</a>
+            <a href="https://ipapi.co">Searching IP Address API</a>
+            <a href="https://openai.com/">Chat GPT</a>
+            <a href="https://getbootstrap.com/">Bootstrap 5</a>
+          </div>
         </div>
       </div>
     </div>
