--- a/Tracking-IP/template/about.html
+++ b/Tracking-IP/template/about.html
@@ -46,7 +46,7 @@
       <div class="row mt-5">
         <div class="col-4">
           <h4>Profile of This Website</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam blanditiis autem adipisci facilis unde rem beatae nisi eveniet consequuntur et corporis, cumque officia culpa explicabo iusto, aperiam quia! Non, perspiciatis!</p>
+          <p>This website we pupose to use many tool to combine together to get a strong website. It contian API, Bootstrap Webframe, Chat GPT</p>
         </div>
         <div class="col-4">
           <h4>Members</h4>
