--- a/Tracking-IP/template/base.html
+++ b/Tracking-IP/template/base.html
@@ -38,6 +38,7 @@
                                 <li><a class="dropdown-item" href="{% url 'home' %}#why_tis_website">Why this website</a></li>
                                 <li><a class="dropdown-item" href="{% url 'home' %}#search_dt">Search detials</a></li>
                                 <li><a class="dropdown-item" href="{% url 'home' %}#ip_lookup">What is an IP-Lookup</a></li>
+                                <li><a class="dropdown-item" href="{% url 'home' %}#ip_address">What is an IP-Address</a></li>
                             </ul>
                         </li>
                         <li><a href="{% url 'about' %}">About</a></li>
