--- a/Tracking-IP/template/index.html
+++ b/Tracking-IP/template/index.html
@@ -59,6 +59,10 @@
                         <h1>What is an "IP Lookup" ?</h1>
                         <p>An IP Lookup is defined as finding the geographical location (or related information like currency, timezone etc.) of an IP address. The lookup can be done either with our API or website. For example, with a plan of 60,000 IP Lookups / month, you can find the location of 60,000 IP addresses in a month. Each conversion of IP address to location is counted as a lookup (repeat queries of the same IP address counts as a separate lookup).</p>     
                     </article>
+                    <article id="ip_address">
+                        <h1>What is an IP-Address ?</h1>
+                        <p>An IP address (Internet Protocol address) is a numerical label assigned to each device connected to a computer network that uses the Internet Protocol for communication. It serves two main purposes: host or network interface identification and location addressing. IP addresses come in two versions: IPv4 (e.g., 192.168.1.1) and IPv6, which is designed to address the exhaustion of IPv4 addresses.</p>
+                    </article>
                 </main>
                 <aside class="col-4 text-end">
                     <h2>Quik Access</h2>
@@ -66,7 +70,7 @@
                         <li><a href="#why_tis_website">why this website?</a></li>
                         <li><a href="#search_dt">Search Detials</a></li>
                         <li><a href="#ip_lookup">What is an IP-Lookup</a></li>
-                        <li><a href="#">Category 4</a></li>
+                        <li><a href="#ip_address">What is IP-Adress</a></li>
                     </ul>
                 </aside>
             </div>
